package seedu.bigpp.component.chassis;

import seedu.bigpp.component.ComponentList;

public class ChassisList extends ComponentList<Chassis> {

}
