package seedu.bigpp.component.cpu;

import seedu.bigpp.component.ComponentList;

public class CPUList extends ComponentList<CPU> {
}
