package seedu.bigpp.component.cpucooler;

import seedu.bigpp.component.ComponentList;

public class CPUCoolerList extends ComponentList<CPUCooler> {
}
