package seedu.bigpp.component.gpu;

import seedu.bigpp.component.ComponentList;

public class GPUList extends ComponentList<GPU> {
}
