package seedu.bigpp.component.motherboard;

import seedu.bigpp.component.ComponentList;

public class MotherboardList extends ComponentList<Motherboard> {
}
