package seedu.bigpp.component.psu;

import seedu.bigpp.component.ComponentList;

public class PSUList extends ComponentList<PSU> {
}
