package seedu.bigpp.component.ram;

import seedu.bigpp.component.ComponentList;

public class RAMList extends ComponentList<RAM> {
}
