package seedu.bigpp.component.storage;

import seedu.bigpp.component.ComponentList;

public class StorageList extends ComponentList<Storage> {
}
